mysql-deploy.yml
# kubectl create configmap transport-sql-config --from-file=transport.sql
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: transport-sql-config
          mountPath: /docker-entrypoint-initdb.d/transport.sql
          subPath: transport.sql
      volumes:
      - name: transport-sql-config
        configMap:
          name: transport-sql-config
